# goit-ds-hw-03

./: README.md
app/: pyproject.toml
app/app/: cats.json  mongo.py  scraping.py
app/app/classes/: entities.py  transactions.py
app/app/core/: db.py
